18 June 2008
+ Added setRequired to title of blog

13 June 2008
+ Added cacheQueries to blog listing.

11 June 2008
+ Using new Layout cacheHeaders function
+ Dropping addStyle for filecabinet

Version 1.7.2
----------------------------------------------------------------
6 June 2008
+ Added js_calender to publish and expire

4 June 2008
+ Fixed forward message when entry creation encounters an error

26 May 2008
+ Removed redundant page tags from blog listing.

23 April 2008
+ Blog uses new dbpager sorting headers.
+ Lets you use new comments approval.
+ Fixed bug with setting allow anonymous submissions.
+ Updated: templates/edit.tpl, templates/list.tpl,
  templates/settings.tpl


17 April 2008
+ Fixed notice warning.
+ Re-added ability to limit folder view by module.

8 April 2008
+ Can use media or image thumbnails on blog listing page.
+ Blog uses new key datetime terminators.
+ File Cabinet style sheet called regardless of cache.
+ Indicators added for published status.
+ Updated: templates/style.css. templates/view.tpl

Version 1.7.1
----------------------------------------------------------------
19 March 2008
+ Fixed update note. Thanks Verdon.

17 March 2008
+ Update was missing parameter when copying templates.

14 March 2008
+ Fixed forward after blog creation. Was using id instead of blog_id

5 March 2008
+ Fixed miniadmin showing to non-admins

26 February 2008
+ Removed redundant key drop from blog deletion.

22 February 2008
+ Publish date was rounding the minutes. This would lead to close
  posts not appearing in the correct order.
+ Changed the default date view to a shorter format. Removed seconds.
+ Italian translations

19 February 2008
+ Blog can list entries by date (month, year, or day)
+ Using new rewrite url format.
+ Calling new Cabinet::fileStyle function in case blog is cached.

Version 1.7.0
----------------------------------------------------------------
8 Feb 2008
+ Fixed call to getImage.

7 Feb 2008