@@ -1,3 +1,6 @@
+19 June 2008
++ The "Posted on" date is now the publish date, not the created date
+
 18 June 2008
 + Added setRequired to title of blog
 
